# ChessAlive

./: .env.example  .gitignore  README.md  demo_narrative_features.py  pyproject.toml  test_features.py
docs/: FEATURE_TEST_REPORT.md  GAME_ANALYSIS_REPORT.md  GUI_GUIDE.md  HELP.md  NARRATIVE_FEATURES_DESIGN.md  PROJECT_EXPANSION_IDEAS.md  cli_screenshot_game.txt  commentary_demo.txt  twitter_content.md
src/chess_alive/: __init__.py  config.py  credentials.py  main.py
src/chess_alive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/chess_alive/core/: __init__.py  game.py  piece.py
src/chess_alive/llm/: __init__.py  client.py  commentary.py  teaching.py
src/chess_alive/modes/: __init__.py  match.py  mode.py
src/chess_alive/narrative/: __init__.py  analysis.py  puzzles.py  stories.py
src/chess_alive/players/: __init__.py  base.py  computer.py  human.py  llm_player.py
src/chess_alive/ui/: __init__.py  cli.py  display.py  gui.py
tests/: __init__.py  test_credentials.py  test_features.py  test_game.py  test_llm.py  test_match.py  test_modes.py  test_ollama_integration.py  test_piece.py  test_players.py  test_teaching.py
